--- a/rivision-angular/src/app/app.component.html
+++ b/rivision-angular/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-if-for></app-if-for>
+<!-- <app-if-for></app-if-for> -->
 <app-reactiveform></app-reactiveform>
+<app-arryform></app-arryform>
+<app-arryform2></app-arryform2>
+<app-service></app-service>
