--- a/rivision-angular/src/app/arryform/arryform.component.html
+++ b/rivision-angular/src/app/arryform/arryform.component.html
@@ -1,1 +1,39 @@
-<p>arryform works!</p>
+<form [formGroup]="loginform"  (ngSubmit)="loginUser()">
+    <div class="container">
+    <h1>School markseet</h1>
+    <div class="form-arry">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control"formControlName="name" placeholder="enter your name">
+     <div>
+         <label for="subject">Subject:</label>
+         <input type="text" class="form-control" formControlName="subject" placeholder="enter your subject">
+         <label for="mark">Mark:</label>
+         <input type="number" class="form-control" formControlName="mark" placeholder="enter your mark" >
+     </div>
+     <!-- <div>
+        <label for="subject">Subject:</label>
+        <input type="text" class="form-control" placeholder="enter your subject">
+        <label for="mark">Mark:</label>
+        <input type="number" class="form-control" placeholder="enter your mark" >
+    </div> -->
+    </div>
+
+    <div class="form-group" formArrayName="skills ">
+        <div *ngFor= "let skill of skills.controls; index as i ">
+            <div [formGroupName]="i">
+                <label>Subject:</label>
+                <input type="text" formControlName="sub" class="form-control"  >
+                <label>Mark:</label>
+                <input type="number" formControlName="marks" class="form-control"  placeholder="enter your mark">   
+                <button (click)="deleteskill(i)">delete</button>
+                <button (click)="addskill()">add</button>
+            </div>
+
+        </div>
+        <button type="submit">submit</button>
+        <div>{{diagnostic }}</div>
+    </div>
+
+
+</div>
+</form>
