add currency popup

--- a/testcurrency/src/app/common/header/header.component.html
+++ b/testcurrency/src/app/common/header/header.component.html
@@ -1,1 +1,10 @@
 <p>header works!</p>
+<div class="container">
+    <div class="navbar">
+        <nav>
+            <button class="dark">Need Help?</button>
+            <button class="dark">Enable/Disable App</button>
+            <button class="lite">arpan-second-test</button>
+        </nav>
+    </div>
+</div>
