--- a/testcurrency/src/app/secure/general/general.component.html
+++ b/testcurrency/src/app/secure/general/general.component.html
@@ -1,5 +1,9 @@
-<app-sidebar></app-sidebar>
-<div class="container">
-<p>general works!</p>
-
-    </div>
+<ng-multiselect-dropdown
+  [placeholder]="'custom placeholder'"
+  [settings]="dropdownSettings"
+  [data]="dropdownList"
+  [(ngModel)]="selectedItems"
+  (onSelect)="onItemSelect($event)"
+  (onSelectAll)="onSelectAll($event)"
+>
+</ng-multiselect-dropdown>
