--- a/testcurrency/src/app/common/sidebar/sidebar.component.scss
+++ b/testcurrency/src/app/common/sidebar/sidebar.component.scss
@@ -1,49 +1,227 @@
-@import url("https://fonts.googleapis.com/css2?family=Comforter&family=Dancing+Script&family=Lato:ital@0;1&family=Lobster&family=Open+Sans&family=Roboto+Condensed&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Comforter&family=Dancing+Script&family=Lato:ital@0;1&family=Lobster&family=Open+Sans&family=Roboto+Condensed&display=swap");
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
-h1,
-h2,
-h3,
-p,
-input,
-label,
-span {
-    font-family: "Lato", sans-serif;
-    line-height: 1.3;
-}
-// .container {
-//     .block {
-//         display: flex;
+// * {
+//     margin: 0px;
+//     padding: 0px;
+// }
+// h1,
+// h2,
+// h3,
+// p,
+// input,
+// label,
+// span {
+//     font-family: "Lato", sans-serif;
+//     line-height: 1.3;
+// }
+// $brand-color: #3e82b0;
+// $brand-hover-color: #276996;
 
-        .sidebar {
-            width: 17%;
-            height: 105vh;
-            color: #3e82b0;
-            text-align: left;
-            display: inline-block;
-            background-color: #3e82b0;
-            .logo {
-                img {
-                    width: 70px;
-                    height: 70px;
-                    text-align: center;
-                    margin: 19px 61px;
-                }
-            }
-            .menu {
-                div {
-                    padding: 14px 46px;
-                    font-size: 17px;
-                    a{
-                        text-decoration: none;
-                        list-style: none;
-                        color: #fff;
+// .sidebar {
+//     width: 18%;
+//     background: $brand-color;
+//     height: 100vh;
+//     color: white;
+//     position: fixed;
+//     transition: all 0.5s ease-in-out;
+//     z-index: 99;
+//     overflow: auto;
+//     padding: 0px 20px;
+//     &.active {
+//         transform: translateX(0%);
+//         background: $brand-color;
+//     }
+//     .sidebar-title {
+//         position: absolute;
+//         left: 50%;
+//         transform: translateX(-50%);
 
+//         .logo {
+//             img {
+//                 height: 80px;
+//                 width: 80px;
+//                 margin: 2px 37px;
+//             }
+//             a {
+//                 display: block;
+//             }
+//         }
 
-                    }
-                }
-            }
-        }
+//         ul {
+//             .sidebar-top {
+//                 position: relative;
+//                 top: 100px;
+//                 height: calc(100vh - 270px);
+//                 overflow: auto;
+//             }
+//             li {
+//                 display: flex;
+//                 align-items: center;
+//                 justify-content: flex-start;
+//                 margin: 5px 0px;
+//                 .menu-icon {
+//                     height: 50px;
+//                     width: 50px;
+//                     min-width: 50px;
+//                     display: flex;
+//                     align-items: center;
+//                     justify-content: center;
+//                     border-radius: 5px;
+
+//                     svg {
+//                         height: 30px;
+//                         width: 30px;
+//                         fill: #fff;
+
+//                         g {
+//                             g {
+//                                 g {
+//                                     path {
+//                                         fill: #fff;
+//                                     }
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+//                 &:hover {
+//                     cursor: pointer;
+
+//                     .menu-icon {
+//                         background: #fff;
+
+//                         svg {
+//                             fill: $brand-color;
+
+//                             g {
+//                                 g {
+//                                     g {
+//                                         path {
+//                                             fill: $brand-color;
+//                                         }
+//                                     }
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+
+//                 &.active {
+//                     cursor: default;
+
+//                     .menu-icon {
+//                         background: #fff;
+
+//                         svg {
+//                             fill: $brand-color;
+
+//                             g {
+//                                 g {
+//                                     g {
+//                                         path {
+//                                             fill: $brand-color;
+//                                         }
+//                                     }
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+
+//                 .menu-text {
+//                     // display: none;
+//                     margin-left: 15px;
+//                     // span {
+//                     // }
+//                 }
+//             }
+//         }
+
+       
+//     }
+//     .sidebar-bottom {
+//         position: absolute;
+//         bottom: 10px;
+//         left: 20px;
+//         width: calc(100% - 40px);
+//         // display: flex;
+//         text-align: center;
+//         justify-content: center;
+
+//         .menu-icon {
+//             height: 50px;
+//             width: 50px;
+//             min-width: 50px;
+//             // display: flex;
+//             // align-items: center;
+//             justify-content: center;
+//             border-radius: 5px;
+
+//             svg {
+//                 height: 30px;
+//                 width: 30px;
+//                 fill: #fff;
+
+//                 g {
+//                     g {
+//                         g {
+//                             path {
+//                                 fill: #fff;
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//         &:hover {
+//             cursor: pointer;
+
+//             .menu-icon {
+//                 background: #fff;
+
+//                 svg {
+//                     fill: $brand-color;
+
+//                     g {
+//                         g {
+//                             g {
+//                                 path {
+//                                     fill: $brand-color;
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+
+//         &.active {
+//             cursor: default;
+
+//             .menu-icon {
+//                 background: #fff;
+
+//                 svg {
+//                     fill: $brand-color;
+
+//                     g {
+//                         g {
+//                             g {
+//                                 path {
+//                                     fill: $brand-color;
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+
+//         .menu-text {
+//             // display: none;
+//             margin-left: 15px;
+//             // span {
+//             // }
+//         }
+//     }
+// }
