--- a/testcurrency/src/app/public/install/install.component.scss
+++ b/testcurrency/src/app/public/install/install.component.scss
@@ -11,7 +11,7 @@ h3,
 label {
     font-family: "Lato", sans-serif;
 }
-.container {
+.container1 {
     header {
         .header {
             display: block;
