--- a/testcurrency/src/app/secure/dashboard/dashboard.component.scss
+++ b/testcurrency/src/app/secure/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
 }
 h1,
 h2,
-h3,
+h4,
 p,
 input,
 label,
@@ -16,7 +16,7 @@ span {
 }
 .container {
     position: absolute;
-    margin-left: 250px;
+    margin-left: 203px;
     top: 0;
     z-index: 12;
     .block {
@@ -25,36 +25,36 @@ span {
         background-color: #fff;
         box-shadow: 0px 0px 9px 0px #f1f0f0;
         margin: 10px 14px;
-        
+        margin-bottom: 100px;
+
         .dashboard {
             margin: 10px 14px;
             padding: 20px 10px;
-            
-            
+
             .block1 {
                 background-color: #f2f5f7;
-                width: 90%;
-                height: 57px;
+                width: 95%;
+                height: 61px;
                 padding: 7px 12px;
                 font-size: 14px;
                 border-radius: 4px;
-                margin: 10px 14px;
+                margin: 7px 14px;
                 border: 1px solid #3e82b0;
+                font-weight: bold;
             }
             .block2 {
                 background-color: #fff;
-                width: 90%;
+                width: 95%;
                 height: auto;
                 padding: 7px 12px;
-                box-shadow: 0px 0px 9px 0px #ccc;
+                box-shadow: 0px 0px 7px -3px #ccc;
                 margin: 10px 14px;
-                border-radius: 4px;
+                border-radius: 8px;
                 line-height: 1.3;
-                
 
                 .heading {
-                    font-size: 18px;
-                    margin-bottom: 5px;
+                    font-size: 15px;
+                    margin-bottom: 8px;
                     font-weight: bold;
                 }
 
@@ -67,8 +67,8 @@ span {
                     .switch {
                         position: relative;
                         display: inline-block;
-                        width: 25px;
-                        height: 16px;
+                        width: 15px;
+                        height: 15px;
                         margin: 7px 12px;
                         input {
                             opacity: 0;
@@ -95,7 +95,7 @@ span {
                         left: 0;
                         right: 0;
                         bottom: 0;
-                        background-color:#ccc;
+                        background-color: #ccc;
                         -webkit-transition: 0.4s;
                         transition: 0.4s;
                         &::before {
@@ -122,17 +122,26 @@ span {
         .inner-text {
             border: 1px solid #ccc;
             border-radius: 3px;
-            font-size: 14px;
+            font-size: 12px;
             margin-top: 10px;
-            background-color: rgb(250, 246, 246);
+            background-color: #fafafa;
+            padding: 6px 8px;
         }
         .input-radio {
+            display: flex;
             font-size: 12px;
             padding: 2px 10px;
+            &:hover{
+                fill:green;
+                &:focus{
+                fill:green;
+
+                }
+            }
             input {
                 span {
                     font-size: 14px;
-                    font-weight: bold;
+                    font-weight: 500;
                     padding: 2px 14px;
                 }
                 .btn {
@@ -149,31 +158,58 @@ span {
             font-weight: bold;
             padding: 2px 14px;
         }
-        // .button1 {
-        //     label {
-        //         padding: 2px 10px;
-        //     }
-        // }
-        .button {
-            display: flex;
 
-            .box {
-                background-color: #fff;
-                box-shadow: 0px 0px 0px 5px #fdf9f9;
-                width: 50px;
-                height: 30px;
-                margin: 15px 10px;
-                text-align: center;
-                // .px{
-                //     width: 20px;
-                //     height: 20px;
-                // }
+        .button {
+            // display: flex;
+            .output {
+                display: flex;
+                .clm {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 13px;
+                    padding: 5px 14px;
+                }
+                .box {
+                    background-color: #fff;
+                    box-shadow: 0px 0px 7px -2px #fdf9f9;
+                    width: 50px;
+                    height: 30px;
+                    text-align: center;
+                    margin-top: 10px;
+                }
             }
         }
-        input{
-            &.color-box{
-                width: 50px;
-                height: 50px;
+        .color-section {
+            display: flex;
+            flex-wrap: wrap;
+            .form-group {
+                justify-content: center;
+                &.c-box {
+                    display: flex;
+                    width: auto;
+                    height: 57px;
+                    text-align: center;
+                    justify-content: center;
+                    background-color: #fff;
+                    box-shadow: 0px 0px 7px -3px #ccc;
+                    margin: 3px 5px;
+                }
+                label {
+                    /* text-align: center; */
+                    /* justify-content: center; */
+                    padding: 21px 2px;
+                    font-size: 12px;
+                }
+                input {
+                    margin: 8px;
+                    &.color-box {
+                        width: 35px;
+                        height: 35px;
+                        box-shadow: 0px 0px 7px -1px #dbdada;
+                        border: none;
+                    
+                    }
+                }
             }
         }
     }
