--- a/rivision-angular/src/styles.scss
+++ b/rivision-angular/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+p{
+    background-color: bisque;
+    font-weight: bold;
+}
+h1{
+    background-color: blue;
+    color: white;
+}
